# codex_enhancer

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  codex-enhancer  codex-enhancer.bat  install_enhancer.bat  pyproject.toml
.codex/skills/: AGENTS.md
.codex/skills/full-repo-improvement-audit/: SKILL.md
.codex/skills/plan-change/: SKILL.md
.codex/skills/repo-dx-audit/: SKILL.md
.codex/skills/repo-performance-audit/: SKILL.md
.codex/skills/repo-test-audit/: SKILL.md
.codex/skills/review-prep/: SKILL.md
.github/workflows/: validate.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
codex_enhancer/: __init__.py  package_assets.py
docs/ai/: architecture.md  code-review.md  migration-v3.md  release.md  repo-audit-roadmap-rubric.md  repo-improvement-audit.md  roadmap.md  spec-kit-bridge.md  utility-harness.md  v2-design.md
scaffold/target-repo/: AGENTS.md  requirements-codex-readers.txt  requirements-codex.txt
scripts/: __init__.py  check.py  codex_enhancer_cli.py  enhancer_spec.py  enhancer_validator.py  install_enhancer.py  install_enhancer_gui.py  install_enhancer_qt_gui.py  install_enhancer_web_gui.py  launch_enhancer_gui.ps1  spec_kit_bridge.py  stack_packs.py  utility_harness.py
tests/: test_check.py  test_codex_enhancer_cli.py  test_install_enhancer.py  test_packaging.py  test_spec_kit_bridge.py  test_stack_packs.py  test_utility_harness.py
(+66 files in other folders)
